
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DToolslib"
version = "0.0.0.0"
description = "A Tools Library (test publish)"
authors = [{ name = "Jf-JIN" }]
readme = "README.md"
license = { file = "LICENSE" } 
requires-python = ">=3.11"
keywords = ["signal", "words", "for", "search"]

# PyPI 分类器 (至少一个，完整列表见 https://pypi.org/classifiers/)
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]

# 依赖管理
# dependencies = [
#     "requests>=2.25.1",
#     "numpy>=1.20.0; python_version >= '3.8'",
# ]

# 可选依赖组 (pip install .[dev,docs])
# optional-dependencies = {
#     dev = ["pytest>=7.0", "black>=23.0"],
#     docs = ["sphinx>=5.0", "furo>=2022.12"]
# }

# # 入口点 (CLI工具)
# scripts = { your-cli = "your_package.cli:main" }

# 项目链接 (显示在PyPI页面)
[project.urls]
Homepage = "https://github.com/Jf-JIN/DToolslib"
Repository = "https://github.com/Jf-JIN/DToolslib"
# Documentation = "https://your-package.readthedocs.io"
# Changelog = "https://github.com/yourusername/your-package/releases"

# 动态版本管理 (推荐使用 setuptools-scm)
# [tool.setuptools_scm]
# write_to = "src/your_package/_version.py"

# 包包含配置
[tool.setuptools]
packages = ["DToolslib"]
# package-dir = { "" = "" }

# 包含数据文件
# [tool.setuptools.package-data]
# your_package = ["data/*.json", "templates/*.html"]

# 类型提示配置
[tool.mypy]
strict = true
ignore_missing_imports = true

# 代码格式化配置
[tool.black]
line-length = 88
target-version = ["py38"]

# 测试配置
# [tool.pytest.ini_options]
# minversion = "7.0"
# testpaths = ["tests"]
